--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
               <source src="lucia-video.mp4" type="video/webm">
             </video>
         </div>
+        <div class="video-mobile">
+          <video autoplay loop muted>
+            <source src="lucyy.mp4" type="video/mp4">
+            <source src="lucyy.mp4" type="video/webm">
+          </video>
+      </div>
             <div class="card-container">
               <div class="card">
               <div class="front-content">
@@ -35,10 +41,8 @@
               </div>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipii
-                  voluptas ten mollitia pariatur odit, ab
-                  minus ratione adipisci accusamus vel est excepturi laboriosam magnam
-                  necessitatibus dignissimos molestias.
+                  Has nacido para triunfar, que los obstáculos 
+                  no te impidan llegar a donde quieres.
                 </p>
               </div>
             </div>
@@ -46,14 +50,12 @@
             <div class="card-container">
               <div class="card">
               <div class="front-content">
-                <p>David</p>
+                <p>Papá</p>
               </div>
               <div class="content">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipii
-                  voluptas ten mollitia pariatur odit, ab
-                  minus ratione adipisci accusamus vel est excepturi laboriosam magnam
-                  necessitatibus dignissimos molestias.
+                  Lo importante de llegar a tu destino 
+                  es haber disfrutado el camino.
                 </p>
               </div>
             </div>
